--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,28 @@
         android:theme="@style/Theme.Reporthing"
         tools:targetApi="31">
         <activity
-            android:name=".Auth.ForgotPassActivity"
+            android:name=".Students.JadwalDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Auth.ChangePassActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Auth.VerifyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Students.JadwalActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Students.ChangePassActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Students.SubjectDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Students.SubjectsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Auth.ForgotPass.ForgotPassActivity"
             android:exported="false" />
         <activity
             android:name=".Teachers.TeacherActivity"
